--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
 </head>
 
 <body>
-    
+    <!-- Start header section -->
+    <header class="header">
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Let's make <br> beautiful flowers a <br> part of your life.</h1>
+                <p>It is a long established fact that a reader will be     distracted by the readable content of a page when looking at     its layout. The point of using Lorem Ipsum is that it has a     more-or-less normal distribution of letters.</p>
+                <button class="button-primary">Shop Now</button>
+            </div>
+                <img class="image-1" src="/flower-image/pngwing 10.png" alt="">
+        </div>        
+    </header>
+     
 </body>
 
 </html>
