--- a/index.html
+++ b/index.html
@@ -17,12 +17,35 @@
         <div class="banner">
             <div class="banner-content">
                 <h1 class="banner-title">Let's make <br> beautiful flowers a <br> part of your life.</h1>
-                <p>It is a long established fact that a reader will be     distracted by the readable content of a page when looking at     its layout. The point of using Lorem Ipsum is that it has a     more-or-less normal distribution of letters.</p>
-                <button class="button-primary">Shop Now</button>
+                <p id="banner-description">It is a long established fact that a reader will be     distracted by the readable content of a page when looking at     its layout. The point of using Lorem Ipsum is that it has a     more-or-less normal distribution of letters.</p>
+                <button class="btn-style">Shop Now</button>
             </div>
-                <img class="image-1" src="/flower-image/pngwing 10.png" alt="">
+                <div class="first-image">
+                    <img class="image-1" src="/flower-image/pngwing 10.png" alt="">
+                </div>
         </div>        
     </header>
+
+        <!-- Our Featured section start -->
+
+    <main class="main-section">
+        <div class="main-div">
+            <h3 class="main-title">Our Featured Flowers</h3>
+            <p class="main-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+        </div>
+        <div class="flower-div">
+            <div class="flower-1">
+                <img src="/flower-image/pngwing 6.png" alt="" class="image-2">
+            </div>
+            <div class="flower-2">
+                <img src="/flower-image/pngwing 5.png" alt="" class="image-3">
+            </div>
+            <div class="flower-3">
+                <img src="/flower-image/pngwing 7.png" alt="" class="image-4">
+            </div>
+        </div>
+
+    </main>
      
 </body>
 
