--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
            <div class="btn-div"> <button class="btn-style-2">Sign Up</button></div>
         </div>
         <div class="offer-flower">
-            <img src="/flower_image/pngwing8.png" alt="">
+            <img src="/flower-image/pngwing 8.png" alt="">
         </div>
     </div>
 
