--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <button class="btn-style">Shop Now</button>
             </div>
                 <div class="first_image">
-                    <img class="image-1" src="/flower-image/pngwing 10.png" alt="">
+                    <img class="image-1" src="./flower-image/pngwing 10.png" alt="">
                 </div>
         </div>        
     </header>
@@ -38,11 +38,11 @@
         </div>
         <div class="flower-div">
             <div class="flower-1">
-                <img src="/flower-image/pngwing 6.png" alt="" class="image-2">
+                <img src="./flower-image/pngwing 6.png" alt="" class="image-2">
                 <p class="flower-name">Pink Flower Tree</p>
             </div>
             <div class="flower-1">
-                <img src="/flower-image/pngwing 5.png" alt="" class="image-2">
+                <img src="./flower-image/pngwing 5.png" alt="" class="image-2">
                 <p class="flower-name">Pink Flower Tree</p>
             </div>
             <!-- <div class="flower-2">
@@ -50,21 +50,21 @@
                 <p class="flower-name">Pink Flower Tree</p>
             </div> -->
             <div class="flower-3">
-                <img src="/flower-image/pngwing 7.png" alt="" class="image-4"> 
+                <img src="./flower-image/pngwing 7.png" alt="" class="image-4"> 
                 <p class="flower-name">Pink Flower Tree</p>
             </div>
         </div>
         <div class="our-services">
             <div class="delivery">
-                <img src="/flower-image/Group 57.png" alt="">
+                <img src="./flower-image/Group 57.png" alt="">
                 <p>Same Day Delivery. Click & Collect.</p>
             </div>
             <div class="delivery">
-                <img src="/flower-image/Group 58.png" alt="">
+                <img src="./flower-image/Group 58.png" alt="">
                 <p>Same Day Delivery. Click & Collect.</p>
             </div>
             <div class="delivery">
-                <img src="/flower-image/Group 59.png" alt="">
+                <img src="./flower-image/Group 59.png" alt="">
                 <p>Same Day Delivery. Click & Collect.</p>
             </div>
         </div>
@@ -78,7 +78,7 @@
            <div class="btn-div"> <button class="btn-style-2">Sign Up</button></div>
         </div>
         <div class="offer-flower">
-            <img src="/flower-image/pngwing 8.png" alt="">
+            <img src="./flower-image/pngwing 8.png" alt="">
         </div>
     </div>
 
@@ -90,10 +90,10 @@
             <p class="social-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
         </div>
         <div class="social-image">
-            <img src="/flower-image/Flower 01.png" alt="" class="common-image">
-            <img src="/flower-image/Rectangle 4.png" alt="" class="common-image">
-            <img src="/flower-image/Rectangle 5.png" alt="" class="common-image">
-            <img src="/flower-image/Rectangle 6.png" alt="" class="common-image">
+            <img src="./flower-image/Flower 01.png" alt="" class="common-image">
+            <img src="./flower-image/Rectangle 4.png" alt="" class="common-image">
+            <img src="./flower-image/Rectangle 5.png" alt="" class="common-image">
+            <img src="./flower-image/Rectangle 6.png" alt="" class="common-image">
         </div>
     </div>
 
